@@ -1,3 +1,8 @@
+2002-11-14  Christopher Faylor  <cgf@redhat.com>
+
+	* fhandler_serial.cc (fhandler_serial::tcgetattr): Don't take any
+	special action when vmin_ == 0.
+
 2002-11-14  Corinna Vinschen  <corinna@vinschen.de>
 
 	* grp.cc (getgroups32): Revert previous patch.  Use impersonation
